--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <h3>Status</h3>
 
                 <ul>
-                  <li>Ainda não se sabe a estenção de seu poder, pricipal aliado na luta conta Ezequiel.</li>
+                  <li>Ainda não se sabe a estenção de seu poder, pricipal aliado na luta contra Ezequiel.</li>
                 </ul>
               </div>
 
